--- a/index.html
+++ b/index.html
@@ -1,48 +1,111 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-XXXXXXX');</script>
-  <!-- End Google Tag Manager -->
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vietnamese Fish Sauce</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Traditional Vietnamese Fish Sauce</title>
+    <link rel="stylesheet" href="style.css">
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-TGZ33PKJ');</script>
 </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXXX"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-  <header>
-    <h1>Discover the Essence of Vietnamese Fish Sauce</h1>
-  </header>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGZ33PKJ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="placeholder-logo.png" alt="Fish Sauce Logo">
+            </div>
+            <ul>
+                <li><a href="#story">Our Story</a></li>
+                <li><a href="#benefits">Benefits</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#cta">Buy Now</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section id="video-section">
-      <h2>Fish Sauce Production</h2>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_YOUTUBE_VIDEO_ID" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Discover the Authentic Taste of Vietnamese Fish Sauce</h1>
+            <p>Experience the rich heritage and unmatched flavor of our traditionally crafted fish sauce.</p>
+            <a href="#cta" class="cta-button">Order Now</a>
+        </div>
     </section>
 
-    <section id="image-section">
-      <h2>Our Premium Fish Sauce</h2>
-      <div class="image-gallery">
-        <img src="placeholder.jpg" alt="Fish Sauce 1">
-        <img src="placeholder.jpg" alt="Fish Sauce 2">
-        <img src="placeholder.jpg" alt="Fish Sauce 3">
-      </div>
+    <section id="story" class="product-story">
+        <h2>The Tradition Behind Every Drop</h2>
+        <div class="story-content">
+            <div class="story-image">
+                <img src="placeholder-fish-sauce-process.jpg" alt="Fish Sauce Making Process">
+            </div>
+            <div class="story-text">
+                <p>Our fish sauce is crafted using time-honored techniques passed down through generations. We start with the finest anchovies, carefully selected and layered with sea salt...</p>
+            </div>
+        </div>
+        <div class="story-content">
+            <div class="story-image">
+                <img src="placeholder-fish-sauce-ingredients.jpg" alt="Fish Sauce Ingredients">
+            </div>
+            <div class="story-text">
+                <p>The perfect blend of fresh fish and salt, aged slowly to create the distinctive umami flavor.</p>
+            </div>
+        </div>
     </section>
 
-    <section id="zalo-section">
-      <h2>Join Our Community</h2>
-      <img src="qr-code.png" alt="Zalo Group QR Code" class="qr-code">
-      <a href="https://zalo.me/YOUR_ZALO_GROUP_LINK" target="_blank">Join our Zalo Group</a>
+    <section id="benefits" class="benefits">
+        <h2>Why Choose Our Fish Sauce?</h2>
+        <div class="benefits-grid">
+            <div class="benefit-item">
+                <img src="placeholder-icon-umami.png" alt="Umami Flavor">
+                <h3>Rich Umami Flavor</h3>
+                <p>Enhance your dishes with a deep, savory taste.</p>
+            </div>
+            <div class="benefit-item">
+                <img src="placeholder-icon-natural.png" alt="Natural Ingredients">
+                <h3>All-Natural Ingredients</h3>
+                <p>Made with only fresh anchovies and sea salt.</p>
+            </div>
+            <div class="benefit-item">
+                <img src="placeholder-icon-versatile.png" alt="Versatile Use">
+                <h3>Versatile in Recipes</h3>
+                <p>Perfect for dipping sauces, marinades, and stir-fries.</p>
+            </div>
+        </div>
     </section>
-  </main>
 
-  <script defer type="text/javascript" src="/main.js"></script>
+    <section class="video-section">
+        <h2>See How It's Made</h2>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_YOUTUBE_VIDEO_ID" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section id="testimonials" class="testimonials">
+        <h2>What Our Customers Say</h2>
+        <div class="testimonial-grid">
+            <div class="testimonial-item">
+                <img src="placeholder-customer-1.jpg" alt="Customer 1">
+                <p>"This fish sauce has elevated my cooking to a new level!" - Jane D.</p>
+            </div>
+            <div class="testimonial-item">
+                <img src="placeholder-customer-2.jpg" alt="Customer 2">
+                <p>"The best fish sauce I've ever tasted. Truly authentic." - Mark S.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="cta" class="call-to-action">
+        <h2>Ready to Elevate Your Cooking?</h2>
+        <a href="#" class="cta-button">Buy Now</a>
+    </section>
+
+    <footer>
+        <div class="social-links">
+            <a href="#"><img src="placeholder-facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="placeholder-instagram.png" alt="Instagram"></a>
+        </div>
+        <p>Contact Us: <a href="mailto:info@yourfishsauce.com">info@yourfishsauce.com</a></p>
+        <p>&copy; 2023 Your Fish Sauce Brand. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
